--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mammoth": "^1.11.0",
     "next": "^14.2.0",
     "openai": "^6.9.1",
+    "pdf-parse": "^2.4.5",
     "pdfjs-dist": "^3.11.174",
     "postcss": "^8.4.0",
     "react": "^18.3.0",
