--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mammoth": "^1.11.0",
     "next": "^14.2.0",
     "openai": "^6.9.1",
+    "pdfjs-dist": "^5.4.394",
     "postcss": "^8.4.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
